Expand setup, data download details

--- a/property_covariance_demo.ipynb
+++ b/property_covariance_demo.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring covariance between properties at different scales\n",
+    "**Author**: Benjamin Jasperson\n",
+    "\n",
+    "**GitHub URL**: https://github.com/bjasperson/property-covariance-demo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,9 +33,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# General instructions\n",
-    "Instruct students to go to [Google Colab](https://colab.research.google.com/). \n",
-    "A popup should appear to \"Open notebook\". Under GitHub, enter the main repo url."
+    "# Setup\n",
+    "The easiest way to run this demonstration is to use Google Colab.\n",
+    "- Go to [Google Colab](https://colab.research.google.com/). \n",
+    "- A popup should appear to \"Open notebook\". \n",
+    "- Under GitHub, enter the main repo url (https://github.com/bjasperson/property-covariance-demo). \n",
+    "- Under path, click 'Open \"property_covariance_demo.ipynb\" in new tab'\n",
+    "- A new tab should open with this notebook. Click \"Shift + Enter\" to run each cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download Data\n",
+    "To begin, we need to import our project data.\n",
+    "Collecting this data ....\n",
+    "\n",
+    "Reference [OpenKim](https://openkim.org/)\n",
+    "\n",
+    "Download the CSV file and look at the first five rows."
    ]
   },
   {
@@ -35,7 +62,8 @@
    "outputs": [],
    "source": [
     "url_link = \"https://github.com/bjasperson/property-covariance-demo/blob/main/data/data.csv?raw=true\"\n",
-    "df_data = pd.read_csv(url_link)"
+    "df_data = pd.read_csv(url_link)\n",
+    "df_data.head()"
    ]
   },
   {
@@ -43,9 +71,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_data.head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
