--- a/property_covariance_demo.ipynb
+++ b/property_covariance_demo.ipynb
@@ -14,8 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring covariance between properties at different scales\n",
-    "**Author**: Benjamin Jasperson\n",
+    "# Exploring covariance between properties across scales\n",
+    "**Authors**: Benjamin Jasperson, Harley T. Johnson\n",
     "\n",
     "**GitHub URL**: https://github.com/bjasperson/property-covariance-demo"
    ]
@@ -28,7 +28,7 @@
     "To begin, we need to import our project data.\n",
     "Collecting this data ....\n",
     "\n",
-    "Reference [OpenKim](https://openkim.org/)\n",
+    "The data we will use is originally from (this manuscript)[https://arxiv.org/abs/2411.16770].\n",
     "\n",
     "Download the CSV file and look at the first five rows."
    ]
@@ -99,16 +99,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Data review\n",
+    "It is important to get a feel for the data that you are working with. \n",
+    "\n",
+    "**Task**: explore different combinations of pairplots for the data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Identifying indicator properties\n",
+    "\n",
+    "**Task**: run K-fold cross-validation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make predictions from first-principles indicator properties\n",
+    "\n",
+    "Import DFT data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "umn",
+   "display_name": "research",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
