--- a/property_covariance_demo.ipynb
+++ b/property_covariance_demo.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,35 +59,223 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>crystal_type</th>\n",
        "      <th>species</th>\n",
-       "      <th>prop1</th>\n",
-       "      <th>prop2</th>\n",
+       "      <th>model</th>\n",
+       "      <th>lattice_constant_bcc</th>\n",
+       "      <th>lattice_constant_fcc</th>\n",
+       "      <th>lattice_constant_sc</th>\n",
+       "      <th>bulk_modulus_bcc</th>\n",
+       "      <th>bulk_modulus_fcc</th>\n",
+       "      <th>bulk_modulus_sc</th>\n",
+       "      <th>...</th>\n",
+       "      <th>unrelaxed_formation_potential_energy_fcc</th>\n",
+       "      <th>unrelaxed_formation_potential_energy_hcp</th>\n",
+       "      <th>vacancy_migration_energy_bcc</th>\n",
+       "      <th>vacancy_migration_energy_fcc</th>\n",
+       "      <th>vacancy_migration_energy_hcp</th>\n",
+       "      <th>vacancy_migration_energy_sc</th>\n",
+       "      <th>relaxation_volume_bcc</th>\n",
+       "      <th>relaxation_volume_fcc</th>\n",
+       "      <th>relaxation_volume_hcp</th>\n",
+       "      <th>coeff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Ag</td>\n",
-       "      <td>5.24</td>\n",
-       "      <td>3.28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>fcc</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>Sim_LAMMPS_MEAM_PascuetFernandez_2015_AlU__SM_...</td>\n",
+       "      <td>3.270778</td>\n",
+       "      <td>4.049999</td>\n",
+       "      <td>2.740228</td>\n",
+       "      <td>54.825677</td>\n",
+       "      <td>78.890189</td>\n",
+       "      <td>46.023445</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.058020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.610757</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.683538</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.191668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>fcc</td>\n",
        "      <td>Al</td>\n",
-       "      <td>6.75</td>\n",
-       "      <td>7.32</td>\n",
+       "      <td>Sim_LAMMPS_MEAM_PascuetFernandez_2015_Al__SM_8...</td>\n",
+       "      <td>3.270778</td>\n",
+       "      <td>4.049999</td>\n",
+       "      <td>2.740228</td>\n",
+       "      <td>54.825677</td>\n",
+       "      <td>78.890189</td>\n",
+       "      <td>46.023445</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.058020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.610485</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.681808</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.191794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>fcc</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>Sim_LAMMPS_MEAM_AlmyrasSangiovanniSarakinos_20...</td>\n",
+       "      <td>3.252540</td>\n",
+       "      <td>4.047000</td>\n",
+       "      <td>2.581950</td>\n",
+       "      <td>71.601330</td>\n",
+       "      <td>79.371087</td>\n",
+       "      <td>61.759057</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.383830</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.573611</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.431662</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.691561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>fcc</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>Sim_LAMMPS_MEAM_JelinekGrohHorstemeyer_2012_Al...</td>\n",
+       "      <td>3.205723</td>\n",
+       "      <td>4.049999</td>\n",
+       "      <td>2.702319</td>\n",
+       "      <td>81.620977</td>\n",
+       "      <td>77.446258</td>\n",
+       "      <td>51.141824</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.841906</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.496487</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.362940</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.134840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>fcc</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>EAM_Dynamo_AngeloMoodyBaskes_1995_NiAlH__MO_41...</td>\n",
+       "      <td>3.367689</td>\n",
+       "      <td>4.050000</td>\n",
+       "      <td>2.705041</td>\n",
+       "      <td>83.092686</td>\n",
+       "      <td>79.372122</td>\n",
+       "      <td>86.368413</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.746775</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.179855</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.521970</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.495295</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 52 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  species  prop1  prop2\n",
-       "0      Ag   5.24   3.28\n",
-       "1      Al   6.75   7.32"
+       "   Unnamed: 0 crystal_type species  \\\n",
+       "0           0          fcc      Al   \n",
+       "1           1          fcc      Al   \n",
+       "2           2          fcc      Al   \n",
+       "3           3          fcc      Al   \n",
+       "4           4          fcc      Al   \n",
+       "\n",
+       "                                               model  lattice_constant_bcc  \\\n",
+       "0  Sim_LAMMPS_MEAM_PascuetFernandez_2015_AlU__SM_...              3.270778   \n",
+       "1  Sim_LAMMPS_MEAM_PascuetFernandez_2015_Al__SM_8...              3.270778   \n",
+       "2  Sim_LAMMPS_MEAM_AlmyrasSangiovanniSarakinos_20...              3.252540   \n",
+       "3  Sim_LAMMPS_MEAM_JelinekGrohHorstemeyer_2012_Al...              3.205723   \n",
+       "4  EAM_Dynamo_AngeloMoodyBaskes_1995_NiAlH__MO_41...              3.367689   \n",
+       "\n",
+       "   lattice_constant_fcc  lattice_constant_sc  bulk_modulus_bcc  \\\n",
+       "0              4.049999             2.740228         54.825677   \n",
+       "1              4.049999             2.740228         54.825677   \n",
+       "2              4.047000             2.581950         71.601330   \n",
+       "3              4.049999             2.702319         81.620977   \n",
+       "4              4.050000             2.705041         83.092686   \n",
+       "\n",
+       "   bulk_modulus_fcc  bulk_modulus_sc  ...  \\\n",
+       "0         78.890189        46.023445  ...   \n",
+       "1         78.890189        46.023445  ...   \n",
+       "2         79.371087        61.759057  ...   \n",
+       "3         77.446258        51.141824  ...   \n",
+       "4         79.372122        86.368413  ...   \n",
+       "\n",
+       "   unrelaxed_formation_potential_energy_fcc  \\\n",
+       "0                                  1.058020   \n",
+       "1                                  1.058020   \n",
+       "2                                  1.383830   \n",
+       "3                                  0.841906   \n",
+       "4                                  0.746775   \n",
+       "\n",
+       "   unrelaxed_formation_potential_energy_hcp  vacancy_migration_energy_bcc  \\\n",
+       "0                                       NaN                           NaN   \n",
+       "1                                       NaN                           NaN   \n",
+       "2                                       NaN                           NaN   \n",
+       "3                                       NaN                           NaN   \n",
+       "4                                       NaN                           NaN   \n",
+       "\n",
+       "   vacancy_migration_energy_fcc  vacancy_migration_energy_hcp  \\\n",
+       "0                      0.610757                           NaN   \n",
+       "1                      0.610485                           NaN   \n",
+       "2                      0.573611                           NaN   \n",
+       "3                      0.496487                           NaN   \n",
+       "4                      0.179855                           NaN   \n",
+       "\n",
+       "   vacancy_migration_energy_sc  relaxation_volume_bcc  relaxation_volume_fcc  \\\n",
+       "0                          NaN                    NaN               4.683538   \n",
+       "1                          NaN                    NaN               4.681808   \n",
+       "2                          NaN                    NaN               5.431662   \n",
+       "3                          NaN                    NaN               5.362940   \n",
+       "4                          NaN                    NaN               5.521970   \n",
+       "\n",
+       "   relaxation_volume_hcp     coeff  \n",
+       "0                    NaN  1.191668  \n",
+       "1                    NaN  1.191794  \n",
+       "2                    NaN  0.691561  \n",
+       "3                    NaN  1.134840  \n",
+       "4                    NaN  0.495295  \n",
+       "\n",
+       "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
