data/notes update

--- a/property_covariance_demo.ipynb
+++ b/property_covariance_demo.ipynb
@@ -25,6 +25,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Background Information\n",
+    "\n",
+    "why\n",
+    "compromise on modeling: accuracy/first-principles vs. speed and domain size.\n",
+    "\n",
+    "what\n",
+    "\n",
+    "goals\n",
+    "\n",
+    "We're interested in uncovering relationships between fundamental microscopic properties and GB energy.\n",
+    "Desire a scalar value to compare against.\n",
+    "Derived a scaling coefficient.\n",
+    "For purposes here, you don't need to worry about how this coefficient is defined (see the paper for details)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Download Data\n",
     "To begin, we need to import our project data.\n",
     "Collecting this data ....\n",
@@ -294,6 +313,7 @@
     "# Data review\n",
     "It is important to get a feel for the data that you are working with. \n",
     "\n",
+    "\n",
     "**Task**: explore different combinations of pairplots for the data. "
    ]
   },
@@ -363,6 +383,15 @@
     "# Identifying indicator properties\n",
     "\n",
     "**Task**: run K-fold cross-validation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Develop regression model\n",
+    "\n",
+    "Linear regression versus SVR."
    ]
   },
   {
