--- a/src/property_covariance_demo.ipynb
+++ b/src/property_covariance_demo.ipynb
@@ -667,6 +667,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's run k-fold CV and get the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -803,7 +810,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**If time**: repeat the steps above using different modeling approaches, e.g., support vector regression. Compare performance of the models, and try to understand why some perform better than others."
+    "**If time**: repeat the steps above using different modeling approaches, e.g., support vector regression. Compare performance of the models, and try to understand why some perform better than others.\n",
+    "\n",
+    "Sort the values based on \"cv_score\", with `ascending=False`. "
    ]
   },
   {
