--- a/src/property_covariance_demo.ipynb
+++ b/src/property_covariance_demo.ipynb
@@ -438,6 +438,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice how properties that are highly correlated with each other appear as square blocks in the plot. This makes it easy to identify groups of properties that can easily be substituted for each other other in the model. \n",
+    "\n",
     "Next, let's look at pairplots of the most correlated features. \n",
     "\n",
     "**Task**: create a function to plot a set of properties from the property dataframe. Use Seaborn pairplot, and set the marker color (`hue`) based on `species`. Explore different combinations of pairplots for the data."
@@ -1946,12 +1948,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additional ideas to explore, as time permits:\n",
+    "That's it! We see that our model predictions match the DFT results pretty well. \n",
+    "\n",
+    "Additional areas to explore, as time permits:\n",
     "- Using different combinations of factors, try to find a better model!\n",
     "- Explore different model types other than linear regression: SVR, ensemble of regressors, ...\n",
     "    - see [here](https://scikit-learn.org/stable/machine_learning_map.html) for ideas\n",
     "- Repeat the process, this time with the strength data\n",
-    "    - URL link to data: https://github.com/bjasperson/property-covariance-demo/blob/main/data/strength_data.csv?raw=true\""
+    "    - [URL link to data](https://github.com/bjasperson/property-covariance-demo/blob/main/data/strength_data.csv?raw=true)"
    ]
   },
   {
