--- a/src/supporting_files.ipynb
+++ b/src/supporting_files.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "# Download Data\n",
-    "To begin, we need to import our project data. The data we will use is originally from [this manuscript](https://arxiv.org/abs/2411.16770) ([published here](https://doi.org/10.1016/j.actamat.2025.120722)). You can find the original paper repo [here](https://github.com/Johnson-Research-Group/gb_covariance).\n",
+    "To begin, we need to import our project data. The data we will use is originally from [this manuscript](https://arxiv.org/abs/2411.16770), [published here](https://doi.org/10.1016/j.actamat.2025.120722). You can find the original paper repo [here](https://github.com/Johnson-Research-Group/gb_covariance).\n",
     "\n",
     "The data includes IP-generated canonical properties, along with an LM model scaling factor calculated from individual symmetric-tilt GB energy simulations.\n",
     "\n",
