--- a/property-covariance-demo.ipynb
+++ b/property-covariance-demo.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "from sklearn.model_selection import KFold, RepeatedKFold, cross_val_score\n",
     "from sklearn.impute import KNNImputer\n",
-    "from sklearn.pipeline import Pipeline, make_pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import linear_model\n",
     "\n",
@@ -313,7 +313,7 @@
    "metadata": {},
    "source": [
     "# Data review\n",
-    "It is important to get a feel for the data that you are working with. To make plotting a little nicer, we have a csv file with key/value pairs to convert the variable names into human readable format.  \n",
+    "It is important to get a feel for the data that you are working with. To make plotting a little easier, we have a csv file with key/value pairs to convert the variable names into human readable format.  \n",
     "\n",
     "**Task**: create a function that will import the label csv file, located at `./data/label_dict.csv`, and convert it to a dictionary called `label_dict` using pandas, for use with plotting. Return the dictionary."
    ]
@@ -382,7 +382,7 @@
    "source": [
     "We now want to look at how the different fundamental properties relate with each other and our Quantity of Interest (GB energy coefficient). To aid in this, we will look at two plots. First, let's plot a heat map of the correlation coefficient. \n",
     "\n",
-    "**Task**: first, save the `df_data` columns to a list and remove the non-property columns (\"crystal_type\", \"species\", \"model\"). Write a function that calls the `correlation_df` function you previously created. Use the Seaborn `heatmap` function to plot the correlation coefficient dataframe."
+    "**Task**: first, save the `df_data` columns to a list and remove the non-property columns (\"crystal_type\", \"species\", \"model\"). Write a function that calls the `correlation_df` function you previously created to get the correlation dataframe. Finally, use the Seaborn `heatmap` function to plot the correlation coefficient dataframe."
    ]
   },
   {
@@ -455,7 +455,7 @@
     "\n",
     "Next, let's look at pairplots of the most correlated features. \n",
     "\n",
-    "**Task**: create a function to plot a set of properties from the property dataframe. Use Seaborn pairplot, and set the marker color (`hue`) based on `species`. Explore different combinations of pairplots for the data."
+    "**Task**: create a function to create pairplots of a set of properties from the property dataframe. Use Seaborn pairplot, and set the marker color (`hue`) based on `species`. Explore different combinations of pairplots for the data."
    ]
   },
   {
@@ -501,6 +501,7 @@
     "                     diag_kind='hist')\n",
     "    sns.move_legend(g, \"upper right\", bbox_to_anchor = (0.85,1))\n",
     "\n",
+    "# a set of parameters to get you started\n",
     "plot_param_list = [\"coeff\", \"lattice_constant_fcc\", \"lattice_constant_bcc\", 'intr_stack_fault_energy_fcc', 'unstable_stack_energy_fcc']\n",
     "pairplot_fun(df_data, plot_param_list, label_dict)"
    ]
@@ -510,7 +511,7 @@
    "metadata": {},
    "source": [
     "Some questions to ponder:\n",
-    "1. Did you find factors that you think are worth including?\n",
+    "1. Did you find any factors that you think are worth including?\n",
     "2. Do you see any outliers that we need to remove? How will you decide what is an outlier?"
    ]
   },
@@ -633,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have our list of possible factor combinations to consider. If we fit our model to the entire dataset, we aren't getting a realistic picture of the test error. So, we will use the `cross_val_score` package from scikit-learn to perform cross validation. Read more about it [here](https://scikit-learn.org/stable/modules/cross_validation.html).\n",
+    "We now have our list of possible factor combinations to consider. If we fit our model to the entire dataset, we are not going to get a realistic picture of the test error. So, we will use the `cross_val_score` package from scikit-learn to perform cross validation. Read more about it [here](https://scikit-learn.org/stable/modules/cross_validation.html).\n",
     "\n",
     "**Task**: write a function that iterates over each subset of the possible factor combinations. For each subset, use the `cross_val_score` package to perform cross-validation and return a score. "
    ]
@@ -686,7 +687,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's run repeated k-fold CV (`n_splits=10`, `n_repeats=5`) and get the results. Call your previously defined `factor_select_cv` function with `RepeatedKFold` for the cv-generator."
+    "Now, let's run repeated k-fold CV and get the results. \n",
+    "\n",
+    "**Task**: Call your previously defined `factor_select_cv` function with `RepeatedKFold` for the cv-generator (`n_splits=10`, `n_repeats=5`)."
    ]
   },
   {
@@ -1155,7 +1158,7 @@
    "source": [
     "Pick the top performing model and make a regression model to use. Make predictions and compare predicted versus actual. We will use `KFold` to divide our data up into k folds, so we don't overestimate our model performance.\n",
     "\n",
-    "**Task**: write a function that will fit a pipe against our IP data, using the best model. Use `KFold` to split our data 5 ways. For each fold, fit a new model to the training data and make a prediction for the test data using the pipe. When done, add the predictions to our `df_data` dataframe as \"coeff_pred\" and return the updated df."
+    "**Task**: write a function that will fit a pipe against our IP data, using the best combination of parameters. Use `KFold` to split our data 5 ways. For each fold, fit a new model to the training data and make a prediction for the test data using the pipe. When done, add the predictions to our `df_data` dataframe as \"coeff_pred\" and return the updated df."
    ]
   },
   {
@@ -1712,7 +1715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have two sets of properties now to consider: one for the IP data, and one for the DFT data. We want to decide which model to use for the DFT data. Let's filter our k-fold CV results to only include the DFT canonical properties.\n",
+    "We have two sets of properties to consider now: one for the IP data, and one for the DFT data. We want to decide which model to use for the DFT data. Let's filter our k-fold CV results to only include the DFT canonical properties.\n",
     "\n",
     "**Task:** Write a function that filters your model performance list from above based on the DFT properties available. Take in the cv results dataframe and a list of DFT properties (from the df_dft columns). If the properties for a given row are all available with DFT results, include it ([hint](https://www.geeksforgeeks.org/python-check-if-the-list-contains-elements-of-another-list/)). Return a dataframe of new, filtered results. Take a look at the top 5 results."
    ]
@@ -1836,7 +1839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task:** Make a list that identifies the factors from the top performing model. Using your previously created function `add_pred`, make a prediction from DFT indicator properties and add the results to `df_dft` under the name \"dft_pred_coeff\"."
+    "**Task:** Make a list that identifies the factors from the top performing model. Create a function that calls your `linear_regr_pipeline()` to create a pipeline, fits the pipe to the IP data, and makes a prediction from DFT indicator properties. Add the results to `df_dft` under the name \"dft_pred_coeff\", and return `df_dft`."
    ]
   },
   {
@@ -1845,7 +1848,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_dft_prediction(model_features):\n",
+    "def get_dft_prediction(model_features, df_dft):\n",
     "    \"\"\"get dft coefficient prediction and add to df as \"dft_pred_coeff\"\n",
     "\n",
     "    Args:\n",
@@ -1870,7 +1873,7 @@
     "                        'unstable_stack_energy_fcc',\n",
     "                    ]\n",
     "\n",
-    "df_dft = get_dft_prediction(dft_model_properties)"
+    "df_dft = get_dft_prediction(dft_model_properties, df_dft)"
    ]
   },
   {
@@ -1970,7 +1973,6 @@
     "That's it! We see that our model predictions match the DFT results pretty well. \n",
     "\n",
     "Additional areas to explore, as time permits:\n",
-    "- Right now, we are using all IP data to fit our model against, then make a prediction. To better estimate the predictive power of our model, we should reserve some data as test data. It makes sense to use cross-validation and report the average error, given our small dataset. Add in cross-validation to make it a more realistic prediction.\n",
     "- Using different combinations of factors, try to find a better model!\n",
     "- Explore different model types other than linear regression: SVR, ensemble of regressors, ...\n",
     "    - see [here](https://scikit-learn.org/stable/machine_learning_map.html) for ideas\n",
